--- a/index.html
+++ b/index.html
@@ -5,6 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
     <style>
+                @media screen and (max-width: 768px) {
+            .resume-container {
+                margin: 20px;
+                width: auto;
+            }
+
+            .header {
+                padding: 20px;
+            }
+
+            .profile-picture {
+                width: 120px;
+                height: 120px;
+            }
+
+            .profile-pictures {
+                width: 100%;
+                height: auto;
+            }
+
+            .content {
+                padding: 15px;
+            }
+
+            .section {
+                margin-bottom: 20px;
+            }
+
+            .skills {
+                flex-wrap: wrap;
+            }
+
+            .skill-tag {
+                margin: 5px;
+            }
+
+            .contact-info {
+                flex-direction: column;
+            }
+
+            .contact-info a {
+                margin: 5px 0;
+            }
+        }
         * {
             margin: 0;
             padding: 0;
